kubernetes/bakery-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bakery-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bakery-server
  template:
    metadata:
      labels:
        app: bakery-server
    spec:
      containers:
        - name: bakery-server
          image: docker.io/calvarado2004/bakery-go-server
          ports:
            - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: bakery-server-service
  labels:
    app: bakery-server
spec:
  ports:
    - port: 50051
      protocol: TCP
      name: grpc
  selector:
    app: bakery-server
