kubernetes/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app.kubernetes.io/name: postgres-bakery
spec:
  ports:
    - port: 5432
      protocol: TCP
      name: postgres
  selector:
    app.kubernetes.io/name: postgres-bakery
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: postgres-bakery
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: postgres-bakery
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postgres-bakery
    spec:
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: postgres
          ports:
            - name: postgres
              containerPort: 5432
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: postgres-pvc
              mountPath: /var/lib/postgresql
            - name: initdb
              mountPath: /docker-entrypoint-initdb.d/create_tables.sql
              subPath: create_tables.sql
              readOnly: true
          terminationMessagePolicy: File
          image: 'postgres:18'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext:
        runAsUser: 0
        runAsGroup: 2000
        supplementalGroups:
          - 0
        fsGroup: 2000
        fsGroupChangePolicy: OnRootMismatch
      schedulerName: stork
      volumes:
        - name: initdb
          configMap:
            name: initdb
            defaultMode: 420
  volumeClaimTemplates:
    - kind: PersistentVolumeClaim
      apiVersion: v1
      metadata:
        name: postgres-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 7Gi
        storageClassName: px-csi-db
        volumeMode: Filesystem
  serviceName: postgres-service
