kubernetes/rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  labels:
    app: rabbitmq
spec:
  ports:
    - port: 5672
      protocol: TCP
      name: rabbitmq
    - port: 15672
      protocol: TCP
      name: rabbitmq-mgmt
  selector:
    app: rabbitmq
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  serviceName: "rabbitmq"
  replicas: 1
  minReadySeconds: 15
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      terminationGracePeriodSeconds: 20
      containers:
        - name: rabbitmq
          image: rabbitmq:3.9-management
          resources:
            requests:
              cpu: 200m
              memory: 60Mi
            limits:
              cpu: 800m
              memory: 512Mi
          ports:
            - containerPort: 5672
              protocol: TCP
              name: rabbitmq
            - containerPort: 15672
              protocol: TCP
              name: rabbitmq-mgmt
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
  volumeClaimTemplates:
    - metadata:
        name: rabbitmq-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: px-csi-db
        resources:
          requests:
            storage: 5Gi
